Add achievements button to index.html

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
   </div>
 
   <script src="script.js"></script>
+<button id="achievementsButton" onclick="openAchievements()">Achievements</button>
 </body>
 </html>
