Update achievements button text with emoji

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   </div>
 
   <script src="script.js"></script>
-<button id="achievementsButton" onclick="openAchievements()">Achievements</button>
+<button id="achievementsButton" onclick="openAchievements()">🎉Achievements</button>
 </body>
 </html>
