Add title and game screens to index.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,20 @@
+<body>
+
+  <!-- TITLE SCREEN -->
+  <div id="titleScreen">
+    <h1>Someone Stole My Beans</h1>
+    <button id="playButton">Play</button>
+  </div>
+
+  <!-- GAME SCREEN -->
+  <div id="gameScreen" style="display:none;">
+    <div id="text"></div>
+    <div id="choices"></div>
+    <button onclick="openAchievements()">Achievements</button>
+  </div>
+
+</body>
+
 <!DOCTYPE html>
 <html>
 <head>
