Add restart button to game screen

--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
     <h1>Someone Stole My Beans</h1>
     <p id="text"></p>
     <div id="choices"></div>
-    <button id="achievementsButton" onclick="openAchievements()">🎉Achievements</button>
+    <div id="gameButtons">
+  <button id="achievementsButton" onclick="openAchievements()">🎉Achievements</button>
+  <button id="restartButton" onclick="restartGame()">⟳ Restart</button>
   </div>
+
 
   <script src="script.js"></script>
 
