--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <h1>Someone Stole My Beans</h1>
     <p id="text"></p>
     <div id="choices"></div>
+    <div id="inventoryPanel">
+  <h3>Inventory</h3>
+  <ul id="inventoryList"></ul>
+</div>
 
     <div id="gameButtons">
       <button id="achievementsButton" onclick="openAchievements()">🎉Achievements</button>
