--- a/index.html
+++ b/index.html
@@ -51,6 +51,53 @@
       <h3>Inventory</h3>
       <ul id="inventoryList"></ul>
     </div>
+<!-- SKILL TREE PANEL -->
+<div id="skillTreePanel" class="menuWindow">
+  <h3>Skill Tree</h3>
+  <p>Coming soon — choose your bean‑based powers.</p>
+</div>
+
+<!-- BEANPEDIA PANEL -->
+<div id="lorePanel" class="menuWindow">
+  <h3>Beanpedia</h3>
+  <p>All known bean lore will appear here.</p>
+</div>
+
+<!-- MAP PANEL -->
+<div id="mapPanel" class="menuWindow">
+  <h3>Map</h3>
+  <p>The world map will go here.</p>
+</div>
+
+<!-- CHAOS MODE PANEL -->
+<div id="chaosPanel" class="menuWindow">
+  <h3>Chaos Mode</h3>
+  <p>Toggle chaos modifiers here.</p>
+</div>
+
+<!-- CUSTOMIZE PANEL -->
+<div id="customizePanel" class="menuWindow">
+  <h3>Customize</h3>
+  <p>Character customization will go here.</p>
+</div>
+
+<!-- SAVE PANEL -->
+<div id="savePanel" class="menuWindow">
+  <h3>Save Game</h3>
+  <p>Click save in the menu to store your progress.</p>
+</div>
+
+<!-- LOAD PANEL -->
+<div id="loadPanel" class="menuWindow">
+  <h3>Load Game</h3>
+  <p>Click load in the menu to restore your progress.</p>
+</div>
+
+<!-- SETTINGS PANEL -->
+<div id="settingsPanel" class="menuWindow">
+  <h3>Settings</h3>
+  <p>Audio, visuals, and accessibility options will go here.</p>
+</div>
 
     <!-- FLOATING MENU BUTTON -->
     <button id="menuToggle">☰ Menu</button>
